samples/_failures_safe/1761731272_288a55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c760a0e8.c:183:1: error: expected identifier or ‘(’ at end of input
  183 | void
      | ^~~~
